--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <img src="jekiii.webp" style="width:100%">
         <img src="bruce.jpg" style="width:100%">
       </div>
+       <div class="w3-half">
+        <img src="yaaaaa.jpg" style="width:100%">
+        <img src="jekiii.webp" style="width:100%">
+        <img src="bruce.jpg" style="width:100%">
+      </div>
     <!-- End photo grid -->
     </div>
   <!-- End Portfolio Section -->
